[package]
name = "calculator_tutorial"
version = "0.2.0"
edition = "2021"
authors = ["Justin Muirhead"]
repository = "https://github.com/hdert/2022"
license = "BSD-3-Clause"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
