[package]
name = "image_combiner"
version = "0.1.0"
edition = "2021"
authors = ["Justin Muirhead"]
repository = "https://github.com/hdert/2022"
license = "BSD-3-Clause"
publish = false
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

image = "0.23.14"